--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     container_name: Crud-java
     image: didox/crud-java-desafio
     environment:
-      MYSQL_HOST: "desafiojava.cvhqofz3hgme.us-east-1.rds.amazonaws.com"
+      MYSQL_HOST: "desafiojava.meubanco.amazonaws.com"
       MYSQL_DATABASE: "desafio21diasjava"
       MYSQL_USER: "admin"
       MYSQL_PASSWORD: "a2d3m4o5i1n1"
